--- a/index.html
+++ b/index.html
@@ -1,11 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Мой первый ToDo List</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <header class="header">
+            <h1><i class="fas fa-tasks"></i> Мой первый ToDo List</h1>
+            <p class="subtitle">Практика работы с DOM в JavaScript</p>
+        </header>
+
+        <main class="main-content">
+            <div class="input-section">
+                <div class="input-group">
+                    <input type="text" id="taskInput" placeholder="Введите новую задачу...">
+                    <button id="addTaskBtn" class="btn-primary">
+                        <i class="fas fa-plus"></i> Добавить
+                    </button>
+                </div>
+                <div class="hint">
+                    <p><i class="fas fa-lightbulb"></i> Введите текст и нажмите "Добавить" или клавишу Enter</p>
+                </div>
+            </div>
+
+            <div class="stats">
+                <div class="stat-item">
+                    <span class="stat-count" id="totalTasks">1</span>
+                    <span class="stat-label">Всего задач</span>
+                </div>
+                <div class="stat-item">
+                    <span class="stat-count" id="completedTasks">0</span>
+                    <span class="stat-label">Выполнено</span>
+                </div>
+                <div class="stat-item">
+                    <span class="stat-count" id="pendingTasks">1</span>
+                    <span class="stat-label">Осталось</span>
+                </div>
+            </div>
+
+            <div class="filters">
+                <button class="filter-btn active" data-filter="all">Все задачи</button>
+                <button class="filter-btn" data-filter="pending">Активные</button>
+                <button class="filter-btn" data-filter="completed">Завершенные</button>
+            </div>
+
+            <div class="tasks-container">
+                <ul id="tasksList">
+                    <!-- Пример задачи для наглядности структуры -->
+                    <li class="task-item" data-id="1">
+                        <input type="checkbox" class="task-checkbox">
+                        <span class="task-text">Написать свой первый ToDo List на JavaScript</span>
+                        <div class="task-actions">
+                            <button class="task-action-btn edit-btn" title="Редактировать">
+                                <i class="fas fa-edit"></i>
+                            </button>
+                            <button class="task-action-btn delete-btn" title="Удалить">
+                                <i class="fas fa-trash-alt"></i>
+                            </button>
+                        </div>
+                    </li>
+                </ul>
+                
+                <div id="emptyState" class="empty-state" style="display: none;">
+                    <i class="fas fa-clipboard-list"></i>
+                    <h3>Список задач пуст</h3>
+                    <p>Добавьте свою первую задачу, используя поле ввода выше</p>
+                </div>
+            </div>
+
+            <div class="actions">
+                <button id="clearCompletedBtn" class="btn-secondary">
+                    <i class="fas fa-trash-alt"></i> Удалить завершенные
+                </button>
+                <button id="markAllBtn" class="btn-secondary">
+                    <i class="fas fa-check-double"></i> Отметить все как выполненные
+                </button>
+            </div>
+        </main>
+
+        <footer class="footer">
+            <p>Практика DOM в JavaScript • Задачи для самостоятельной реализации</p>
+            <p class="hint">Для редактирования задачи - кликните дважды по тексту</p>
+        </footer>
+    </div>
 </body>
 </html>
