--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мой первый ToDo List</title>
+    <title>ToDo List</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1><i class="fas fa-tasks"></i> Мой первый ToDo List</h1>
+            <h1><i class="fas fa-tasks"></i>ToDo List</h1>
             <p class="subtitle">Практика работы с DOM в JavaScript</p>
         </header>
 
@@ -53,18 +53,25 @@
             <div class="tasks-container">
                 <ul id="tasksList">
                     <!-- Пример задачи для наглядности структуры -->
-                    <li class="task-item" data-id="1">
+                   <li class="task-item" data-id="1">
                         <input type="checkbox" class="task-checkbox">
-                        <span class="task-text">Написать свой первый ToDo List на JavaScript</span>
-                        <div class="task-actions">
-                            <button class="task-action-btn edit-btn" title="Редактировать">
-                                <i class="fas fa-edit"></i>
-                            </button>
-                            <button class="task-action-btn delete-btn" title="Удалить">
-                                <i class="fas fa-trash-alt"></i>
-                            </button>
-                        </div>
-                    </li>
+                           <span class="task-text">Написать свой первый ToDo List на JavaScript</span>
+    <div class="task-actions">
+        <!-- Иконка редактирования -->
+        <img src="https://cdn-icons-png.flaticon.com/512/3597/3597075.png" 
+             alt="Редактировать" 
+             class="task-action-img edit-btn" 
+             title="Редактировать"
+             width="24" height="24">
+        
+        <!-- Иконка удаления -->
+        <img src="https://cdn-icons-png.flaticon.com/512/3405/3405244.png" 
+             alt="Удалить" 
+             class="task-action-img delete-btn" 
+             title="Удалить"
+             width="24" height="24">
+        </div>
+</li>
                 </ul>
                 
                 <div id="emptyState" class="empty-state" style="display: none;">
